--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "remote-electron",
   "version": "0.0.1",
   "description": "",
-  "main": "main.js",
+  "main": "src/server/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
